converted fully to paper